--- a/app/src/main/res/layout/activity_xrx.xml
+++ b/app/src/main/res/layout/activity_xrx.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/new_activity_vertical_margin"
     tools:context="com.example.jianming.myapplication.XrxActivity">
 
-    <ImageView
+    <com.example.jianming.Utils.YImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
