--- a/app/src/main/res/layout/vlist.xml
+++ b/app/src/main/res/layout/vlist.xml
@@ -1,33 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:weightSum="1">
 
 
-    <ImageView android:id="@+id/img"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-
-        android:layout_margin="5px"
-        android:layout_weight="0.09" />
-
-    <LinearLayout android:orientation="vertical"
+    <ImageView
+        android:id="@+id/img"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content" />
 
-        <TextView android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFFFF"
-            android:textSize="22px" />
-        <TextView android:id="@+id/info"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#FFFFFFFF"
-            android:textSize="13px" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#FFFFFFFF"
+        android:textSize="22px"
+        android:visibility="gone" />
 
 
 </LinearLayout>
