--- a/app/src/main/res/layout/activity_file_training.xml
+++ b/app/src/main/res/layout/activity_file_training.xml
@@ -21,5 +21,14 @@
         android:layout_below="@+id/write_file"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/network"
+        android:text="network"
+        android:layout_below="@+id/read_file"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        />
 
 </RelativeLayout>
