--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -8,7 +8,7 @@
 
 
 
-    <com.example.jianming.Utils.YImageView
+    <com.example.jianming.views.YImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/image_view1"
