--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,23 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <com.example.jianming.views.CustomerView1
+        android:id="@+id/customer_view1"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_below="@+id/fileTrainingBtn"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/longerBtn"
+        android:text="longer"
+        android:layout_below="@+id/customer_view1"
+        />
+
+
+
 
 
 </RelativeLayout>
