--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -9,4 +9,12 @@
         android:id="@+id/pic_text_view"
         android:text="text"
         />
+
+    <com.example.jianming.views.CustomerView1
+        android:id="@+id/customer_view1"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@+id/pic_text_view"
+        />
+
 </RelativeLayout>
