--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="@dimen/abc_action_bar_icon_vertical_padding_material"
+    android:paddingLeft="0dp"
+    android:paddingRight="0dp"
+    android:paddingBottom="16dp"
+    android:paddingTop="16dp"
     >
     <TextView
         android:layout_width="wrap_content"
