--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -13,7 +13,7 @@
         android:text="text"
         />
 
-    <com.example.jianming.views.CustomerView1
+    <com.example.jianming.views.DownloadProcessView
         android:id="@+id/customer_view1"
         android:layout_width="match_parent"
         android:layout_height="2dp"
