--- a/app/src/main/res/layout/activity_pic_list_acivity.xml
+++ b/app/src/main/res/layout/activity_pic_list_acivity.xml
@@ -13,4 +13,30 @@
         android:id="@+id/list_view1"
         />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:id="@+id/lock_screen"
+        android:background="@color/primary_dark_material_dark">
+        <EditText
+            android:layout_width="144dp"
+            android:layout_height="40dp"
+
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="64dp"
+            android:inputType="textPassword"
+            android:gravity="center" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="104dp"
+            android:text="Unlock"
+            />
+    </RelativeLayout>
+
 </RelativeLayout>
