--- a/app/src/main/res/layout/activity_pic_list_acivity.xml
+++ b/app/src/main/res/layout/activity_pic_list_acivity.xml
@@ -22,7 +22,7 @@
         <EditText
             android:layout_width="144dp"
             android:layout_height="40dp"
-
+            android:id="@+id/pwd_et"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="64dp"
@@ -35,6 +35,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="104dp"
+            android:id="@+id/unlock_btn"
             android:text="Unlock"
             />
     </RelativeLayout>
