--- a/app/src/main/res/layout/activity_xrx.xml
+++ b/app/src/main/res/layout/activity_xrx.xml
@@ -6,13 +6,13 @@
     android:paddingBottom="@dimen/new_activity_vertical_margin"
     tools:context="com.example.jianming.myapplication.XrxActivity">
 
-    <com.example.jianming.views.YImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.example.jianming.views.YImageSlider
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
 
         android:id="@+id/image"
-        android:src="@null"
+
         />
 
 </RelativeLayout>
