--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,13 @@
     </style>
 
     <style name="AppTheme1" parent="android:Theme.Holo">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+    </style>
+
+    <style name="MyActionBar"
+           parent="android:Widget.Holo.ActionBar">
+        <item name="android:background">@drawable/ab_transparent_green_holo</item>
+
 
     </style>
 
