--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
 
     <style name="AppTheme1" parent="android:Theme.Holo">
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:editTextBackground">@drawable/edit_text_holo_green</item>
     </style>
 
     <style name="MyActionBar"
