--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,23 +14,49 @@
 
                                        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">
     </android.support.v7.widget.Toolbar>
+    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                            android:id="@+id/dl_left"
+                                            android:layout_below="@+id/tl_custom"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="match_parent">
+        <RelativeLayout android:layout_height="match_parent" android:layout_width="match_parent" >
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/su27"
+                    android:text="@string/su27"
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/su27"
-        android:text="@string/su27"
-        android:layout_below="@+id/tl_custom"
-         />
+                    />
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pic_index"
-        android:id="@+id/picIndexBtn"
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pic_index"
+                    android:id="@+id/picIndexBtn"
 
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" android:layout_below="@+id/su27"/>
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" android:layout_below="@+id/su27"/>
+        </RelativeLayout>
+
+
+
+        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
+                      android:layout_gravity="start"
+                      android:background="@color/background_floating_material_dark"
+                >
+            <ListView
+                    android:id="@+id/lv_left_menu"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+
+                    android:divider="@null"
+                    android:text="DrawerLayout" />
+        </LinearLayout>
+
+    </android.support.v4.widget.DrawerLayout>
+
+
+
 
 </RelativeLayout>
