--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,12 @@
     </style>
 
     <style name="AppTheme1" parent="Theme.AppCompat.NoActionBar">
+        <item name="drawerArrowStyle">@style/AppTheme.DrawerArrowToggle</item>
         <!--<item name="android:actionBarStyle">@style/MyActionBar</item>-->
         <!--<item name="android:editTextBackground">@drawable/edit_text_holo_green</item>-->
+    </style>
+    <style name="AppTheme.DrawerArrowToggle" parent="Base.Widget.AppCompat.DrawerArrowToggle">
+        <item name="color">@android:color/white</item>
     </style>
 
     <style name="MyActionBar"
