--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,7 @@
 
     <style name="MyActionBar"
            parent="android:Widget.Holo.ActionBar">
-        <item name="android:background">@drawable/ab_transparent_green_holo</item>
+        <!--<item name="android:background">@drawable/ab_transparent_green_holo</item>-->
 
 
     </style>
