--- a/app/src/main/res/layout/activity_pic_list_acivity.xml
+++ b/app/src/main/res/layout/activity_pic_list_acivity.xml
@@ -4,7 +4,7 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:paddingBottom="0dp"
-    tools:context="com.example.jianming.myapplication.PicIndexListActivity">
+    tools:context="com.example.jianming.myapplication.PicAlbumListActivity">
 
     <ListView
         android:layout_height="wrap_content"
