--- a/app/src/main/res/layout/acivity_pic_album_list.xml
+++ b/app/src/main/res/layout/acivity_pic_album_list.xml
@@ -6,10 +6,20 @@
     android:paddingBottom="0dp"
     tools:context="com.example.jianming.myapplication.PicAlbumListActivity">
 
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/tl_custom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ab_transparent_green_holo"
+
+        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+    </android.support.v7.widget.Toolbar>
+
     <ListView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-
+        android:layout_below="@+id/tl_custom"
         android:id="@+id/list_view1"
         />
 
