--- a/app/src/main/res/layout/activity_file_training.xml
+++ b/app/src/main/res/layout/activity_file_training.xml
@@ -19,25 +19,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/local1000"
+        android:text="local1000"
         android:layout_below="@+id/file_training_toolbar"
-        android:id="@+id/write_file"
-        android:text="write file"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/read_file"
-        android:text="read file"
-        android:layout_below="@+id/write_file"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/network"
-        android:text="network"
-        android:layout_below="@+id/read_file"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         />
