--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -21,7 +21,7 @@
         android:layout_alignParentRight="true"
         />
 
-    <com.example.jianming.views.DownloadProcessView
+    <com.example.jianming.views.DownloadProcessBar
         android:id="@+id/customer_view1"
         android:layout_width="match_parent"
         android:layout_height="2dp"
