update for multi-download processes

--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -26,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_below="@+id/pic_text_view"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
