--- a/app/src/main/res/menu/menu_album_list.xml
+++ b/app/src/main/res/menu/menu_album_list.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/hide_not_exist" android:title="@string/hide_not_exist_item"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/call_download" android:title="@string/call_download"
+        android:orderInCategory="101" app:showAsAction="never" />
 </menu>
