--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,12 +11,12 @@
         <!--<item name="android:actionBarStyle">@style/MyActionBar</item>-->
         <!--<item name="android:editTextBackground">@drawable/edit_text_holo_green</item>-->
     </style>
+
     <style name="AppTheme.DrawerArrowToggle" parent="Base.Widget.AppCompat.DrawerArrowToggle">
         <item name="color">@android:color/white</item>
     </style>
 
-    <style name="MyActionBar"
-           parent="android:Widget.Holo.ActionBar">
+    <style name="MyActionBar" parent="android:Widget.Holo.ActionBar">
         <!--<item name="android:background">@drawable/ab_transparent_green_holo</item>-->
 
 
@@ -38,7 +38,9 @@
     </style>
 
     <style name="ButtonBarButton" />
+
     <style name="AppTheme1.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="AppTheme1.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
