--- a/app/src/main/res/layout/content_pic_album_list_activity_md.xml
+++ b/app/src/main/res/layout/content_pic_album_list_activity_md.xml
@@ -12,9 +12,10 @@
     tools:context="com.example.jianming.myapplication.PicAlbumListActivityMD"
     tools:showIn="@layout/activity_pic_album_list_activity_md">
 
-    <ListView
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:id="@+id/list_view1"
+        android:scrollbars="vertical"
+        android:id="@+id/list_view11"
         />
 </RelativeLayout>
