--- a/app/src/main/res/layout/activity_file_training.xml
+++ b/app/src/main/res/layout/activity_file_training.xml
@@ -11,9 +11,10 @@
         android:id="@+id/file_training_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/ab_transparent_green_holo"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme1.PopupOverlay"
 
-        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+        >
     </android.support.v7.widget.Toolbar>
 
     <Button
