--- a/app/src/main/res/layout/activity_local_1k.xml
+++ b/app/src/main/res/layout/activity_local_1k.xml
@@ -4,7 +4,7 @@
     android:paddingRight="0dp"
     android:paddingTop="0dp"
     android:paddingBottom="0dp"
-    tools:context="com.example.jianming.myapplication.FileTrainingActivity">
+    tools:context="com.example.jianming.myapplication.Local1KActivity">
 
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
