--- a/app/src/main/res/menu/menu_album_list.xml
+++ b/app/src/main/res/menu/menu_album_list.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".Main2Activity">
     <item android:id="@+id/hide_not_exist" android:title="@string/hide_not_exist_item"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/call_download" android:title="@string/call_download"
