add jackson to parse json

--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -21,12 +21,20 @@
         android:layout_alignParentRight="true"
         />
 
+    <!--
     <com.example.jianming.views.DownloadProcessBar
         android:id="@+id/customer_view1"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_below="@+id/pic_text_view"
         android:visibility="gone"
+        />
+    -->
+    <org.nanjing.knightingal.processerlib.view.ProcessBar
+        android:id="@+id/customer_view1"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@+id/pic_text_view"
         />
 
 </RelativeLayout>
