--- a/app/src/main/res/layout/activity_pic_content.xml
+++ b/app/src/main/res/layout/activity_pic_content.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/new_activity_vertical_margin"
     tools:context="com.example.jianming.myapplication.PicContentActivity">
 
-    <com.example.jianming.views.YImageSlider
+    <org.nanking.knightingal.view.KImageSlider
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
