--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -33,6 +33,7 @@
         android:id="@+id/customer_view1"
         android:layout_width="match_parent"
         android:layout_height="2dp"
+        android:visibility="invisible"
         android:layout_below="@+id/pic_text_view"
         />
 
