--- a/app/src/main/res/layout/content_pic_album_list_activity_md.xml
+++ b/app/src/main/res/layout/content_pic_album_list_activity_md.xml
@@ -9,7 +9,7 @@
     tools:context="com.example.jianming.myapplication.PicAlbumListActivityMD"
     tools:showIn="@layout/activity_pic_album_list_activity_md">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:scrollbars="vertical"
