--- a/app/src/main/res/layout/activity_pic_content.xml
+++ b/app/src/main/res/layout/activity_pic_content.xml
@@ -7,7 +7,8 @@
     tools:context="com.example.jianming.myapplication.PicContentActivity">
 
     <!--<org.nanking.knightingal.view.KImageSlider-->
-    <org.nanking.knightingal.view.KImageSlider
+    <org.nanking.knightingal.kslideviewlib.YImageSlider
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
