--- a/app/src/main/res/layout/activity_pic_album_list_activity_md.xml
+++ b/app/src/main/res/layout/activity_pic_album_list_activity_md.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.jianming.myapplication.PicAlbumListActivityMD">
+    tools:context="com.example.jianming.myapplication.PicAlbumListActivity">
 
 
     <include layout="@layout/content_pic_album_list_activity_md" />
