--- a/app/src/main/res/layout/activity_local_1k.xml
+++ b/app/src/main/res/layout/activity_local_1k.xml
@@ -8,12 +8,13 @@
 
 
     <Button
+        android:id="@+id/local1000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/local1000"
-        android:text="local1000"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:text="local1000" />
 
 </RelativeLayout>
