--- a/app/src/main/res/layout/activity_local_1k.xml
+++ b/app/src/main/res/layout/activity_local_1k.xml
@@ -14,7 +14,18 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         android:text="local1000" />
+
+    <Button
+        android:id="@+id/offline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="80dp"
+        android:text="offline" />
 
 </RelativeLayout>
