--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -7,6 +7,7 @@
     android:paddingRight="16dp"
     android:paddingBottom="16dp"
     android:paddingTop="16dp"
+    android:clickable="true"
     android:id="@+id/pic_list_content">
     <TextView
         android:layout_width="wrap_content"
