--- a/app/src/main/res/layout/pic_list_content.xml
+++ b/app/src/main/res/layout/pic_list_content.xml
@@ -28,17 +28,20 @@
         android:indeterminate="false"
         app:indicatorSize="24dp"
         android:max="100"
-        android:progress="0" />
+        android:progress="50" />
 
-    <ImageButton
+    <Button
         android:id="@+id/btn_delete"
-        android:src="@drawable/ic_keyboard_arrow_right_black_48dp"
-        android:layout_gravity="center"
+        style="?attr/materialIconButtonStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:icon="@drawable/ic_close_vd_theme_24px"
+        app:iconTint="?attr/colorOnSurfaceVariant"
         android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:visibility="visible"
         android:layout_marginEnd="16dp"
-        android:layout_width="24dp"
-        android:visibility="gone"
-        android:layout_height="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
 
